@@ -16,6 +16,7 @@ MRR?01		New Super Mario Bros. Wii Retro Remix
 SCL?01		Cliff Super Mario Bros. Wii
 SFL?01		NSMBW3: The Final Levels
 SLB?01		MLG Super Luigi Bros. Wii
+SMM?02		Super Mario: Mushroom Adventure PLUS - Winter Moon
 SMN?03		Newer Super Mario Bros. Wii
 SMN?04		Canon Super Mario Bros. Wii
 SMN?05		Another Super Mario Bros. Wii
@@ -24,7 +25,6 @@ SMN?07		Newer Holiday Special
 SMN?08		Epic Super Bowser World
 SMN?10		Koopa Country
 SMN?11		New Super Mario Bros. 4
-SMN?12		Awesomer Super Luigi Mini
 SMN?31		New Super Mario Bros. Wii - Other World
 SMN?41		Devil Mario Winter Special
 SMN?60		Remixed Super Mario Bros. Wii
@@ -39,7 +39,6 @@ SMN?YL		Luigi's Super Yoshi Bros.
 SMN?ZA		Newer Apocalypse
 SMN?ZC		Challenging Super Mario Bros. Wii: Virtual Special
 SMN?ZY		Super Mario Skyland
-SMM?02		Super Mario: Mushroom Adventure PLUS - Winter Moon
 SMV?01		Super Mario Vacation
 
 ### Mario Kart Wii ###
