@@ -1,5 +1,7 @@
+SCL*01:Cliff Super Mario Bros. Wii
 SLB*01:MLG Super Luigi Bros. Wii
 SLF*01:NSMBW3: The Final Levels
+SMM*02:Super Mario: Mushroom Adventure PLUS - Winter Moon
 SMN*01:Original New Super Mario Bros. Wii
 SMN*03:Newer Super Mario Bros. Wii
 SMN*04:Canon Super Mario Bros. Wii
@@ -9,7 +11,6 @@ SMN*07:Newer Holiday Special
 SMN*08:Epic Super Bowser World
 SMN*10:Koopa Country
 SMN*11:New Super Mario Bros. 4
-SMN*12:Awesomer Super Luigi Mini
 SMN*31:New Super Mario Bros. Wii - Other World
 SMN*41:Devil Mario Winter Special
 SMN*60:Remixed Super Mario Bros. Wii
@@ -23,6 +24,5 @@ SMN*RV:RVLution Wii (NewSMB Mod)
 SMN*YL:Luigi's Super Yoshi Bros.
 SMN*ZA:Newer Apocalypse
 SMN*ZY:Super Mario Skyland
-SMM*02:Super Mario: Mushroom Adventure PLUS - Winter Moon
 SMV*01:Super Mario Vacation
 MRR*01:New Super Mario Bros. Wii Retro Remix
