@@ -10,7 +10,6 @@ NSMB9:RetroRemix:nsmbw/retroremix.sh
 NSMB10:WinterMoon:nsmbw/wintermoon.sh
 NSMB11:NSMBW3:nsmbw/nsmbw3.sh
 NSMB12:Vacation:nsmbw/summervacation.sh
-NSMB13:ASLM:nsmbw/awesomersuperluigi.sh
 NSMB14:Sykland:nsmbw/skyland.sh
 NSMB15:RVLution:nsmbw/rvlution.sh
 NSMB16:Midi:nsmbw/midissupermariowii.sh
